space in service

--- a/Books_Api/appsettings.json
+++ b/Books_Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=youserver;Initial Catalog=Books;Persist Security Info=True;User ID=sa;Password=xxx"
+    "DefaultConnection": "Server=;Initial Catalog=Books;Persist Security Info=True;User ID=sa;Password=xxx"
   },
   "Logging": {
     "LogLevel": {
